# radium-trial-unit-task

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  package.json  pyproject.toml  setup.cfg
radium/: __init__.py  __main__.py
tests/: __init__.py  test_radium.py
