[tool.poetry]
name = "radium"
version = "0.1.0"
description = ""
authors = ["fj-fj-fj <x1x1xx0@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^3.0.0"
pytest-xdist = {extras = ["psutil"], version = "^2.1.0"}
pytest-sugar = "^0.9.4"
Faker = "^9.5.0"
pytest-snapshot = "^0.7.0"
pytest-asyncio = "^0.17.2"
wemake-python-styleguide = "^0.16.0"
flake8-pytest-style = "^1.3.0"
flake8-SQL = "^0.4.1"
flake8-annotations = "^2.4.1"
flake8-logging-format = "^0.6.0"
flake8-coding = "^1.3.2"
flake8-spellcheck = "^0.24.0"
nitpick = "^0.31.0"
autopep8 = "^1.5.4"
isort = "^5.7.0"
pylint = "^2.12.2"
darglint = "^1.8.1"
commitizen = "^2.20.4"
pre-commit = "^2.17.0"
black = "^21.12b0"
mypy = "^0.931"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[nitpick]
minimum_version = "0.27.0"

[nitpick.files.absent]
"requirements.txt" = "Install poetry, run 'poetry init' to create pyproject.toml, and move dependencies to it"
"Pipfile" = "Use pyproject.toml instead"
"Pipfile.lock" = "Use pyproject.toml instead"

".isort.cfg" = "Move values to setup.cfg, section [isort]"
".flake8" = "Move values to setup.cfg, section [flake8]"
"mypy.ini" = "Move values to setup.cfg, section [mypy]"

".travis.yml" = "Travis is shutting down, please switch to some other CI service"
".pyup.yml" = "Configure your CI with safety instead: https://github.com/pyupio/safety#using-safety-with-a-ci-service"


[nitpick.files.present]
"CHANGELOG.md" = "A project should have `CHANGELOG.md`"
"README.md" = "A project should have `README.md`"
".gitignore" = "A project should have `.gitignore` file"

[nitpick.styles]
include = [
  "file-structure.toml",
  "styleguide.toml",
  "flake8.toml",
  "isort.toml",
  "darglint.toml",
  "pytest.toml"
]

[tool.black]
line-length = 120

[tool.poetry.extras]
lint = [ "pylint",]

[tool.poetry.dependencies.pylint]
version = "*"
optional = true

["setup.cfg".darglint]
strictness = "long"

["setup.cfg".flake8]
ignore = "F841,W504"
per-file-ignores = "tests/**.py: S101, D103, ANN201"
spellcheck-targets = "comments"
sql-excepted-names = "EXISTS"

["setup.cfg".isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
